--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,6 @@
         enable_page_level_ads: true
      });
   </script>
+  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
 </head>
