--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
-
+<amp-auto-ads type="adsense"
+              data-ad-client="ca-pub-8784678614220981">
+</amp-auto-ads>
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
