--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
-<amp-auto-ads type="adsense"
-              data-ad-client="ca-pub-8784678614220981">
-</amp-auto-ads>
+<div align="center>
+  <!-- Docs -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-8784678614220981"
+       data-ad-slot="7019225149"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
