--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,10 +29,11 @@
   </div>
 </header>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Docs -->
+<!-- Docs Header -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-8784678614220981"
-     data-ad-slot="7019225149"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="5502037454"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
