--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,15 @@
 <div align="center">
-  <!-- Docs -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-8784678614220981"
-       data-ad-slot="7019225149"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Docs -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8784678614220981"
+     data-ad-slot="7019225149"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </div>
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
