--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,11 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div id="codefund"></div>
+<script
+src="https://app.codefund.io/properties/704/funder.js"
+async
+></script>
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
